--- a/Desktop Server/MainWindow.xaml
+++ b/Desktop Server/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="MainWindow" Height="345.447" Width="532.447" Closing="Window_Closing">
+        Title="MainWindow" Height="353.447" Width="532.447" Closing="Window_Closing">
     <Grid Height="312" VerticalAlignment="Top">
         <TextBox x:Name="logBox" HorizontalAlignment="Left" Height="163" Margin="10,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="497" VerticalScrollBarVisibility="Auto"/>
         <Button x:Name="stopServerButton" Content="Stop Server" HorizontalAlignment="Left" Margin="403,257,0,0" VerticalAlignment="Top" Width="104" Height="34" Click="stopServerButton_Click"/>
@@ -20,6 +20,7 @@
         <CheckBox x:Name="invertAxisBox" Content="Invert Axis" 
                   HorizontalAlignment="Left" Margin="414,221,0,0" VerticalAlignment="Top" 
                   Checked="invertAxisBox_Checked" Unchecked="invertAxisBox_Unchecked"/>
+        <Label x:Name="testLabel" Content="Label" HorizontalAlignment="Left" Margin="184,8,0,0" VerticalAlignment="Top" Width="137"/>
 
     </Grid>
 </Controls:MetroWindow>
